[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ecdf"
description = "Visualize dataframes with echarts"
readme = "README.md"
requires-python = ">= 3.8"
authors = [{name = "Shel Kong", email = "kongscn@gmail.com"}]
dynamic = ["version"]
dependencies = [
  "numpy",
  "pandas",
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
[project.urls]
Repository = "https://github.com/kongscn/ecdf"

[tool.ruff]
extend-select = ["ARG"]
